--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,14 @@
 .top {
-  background-color: rgb(227, 227, 227);
+  width: 100%;
+  background-color: rgb(255, 255, 255);
   padding-top: 4%;
-  padding-bottom: 4%;
+  padding-bottom: 2%;
+  padding-left: 4%;
 }
 .app{
   height:100%;
   width:100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
