--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -1,12 +1,14 @@
 .main-container {
-    height:100%;
-    width:100%;
+    height:80vh;
+    width:80%;
+    box-shadow: 5px rgb(92, 92, 92);
 }
 .header-container{
     width:100%;
     display:flex;
     justify-content: space-evenly;
     border-bottom: 1px solid gray;
+    align-items: center;
 }
 .menu-container {
     display: flex;
@@ -16,8 +18,26 @@
 }
 .reject-all-container {
     display:flex;
-    align-items:center;
     justify-content: center;
     height: cover;
     width: 300px;
+    padding-bottom: 10px;
+    align-items: baseline;
+}
+.reject-button{
+    display: block;
+    margin: 40px auto 0px;
+    text-align: center;
+    background: #ed3c25;
+    border-radius: 3px;
+    box-shadow: 0 10px 20px -8px #ed3c25;
+    padding: 10px 17px;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    color: #ffffff;
+    text-decoration: none;
+    -webkit-transition: 0.3s ease;
+    transition: 0.3s ease;
 }
