--- a/client/src/pages/Home/index.css
+++ b/client/src/pages/Home/index.css
@@ -1,4 +1,7 @@
 .main-container {
-    height:100%;
-    width:100%;
-}
+    height:80vh;
+    width:80%;
+    background-color: rgb(219, 219, 219);
+    overflow: scroll;
+    border-radius: 10px;
+    box-shadow: 5px rgb(92, 92, 92);}
