--- a/client/src/pages/Likes/index.css
+++ b/client/src/pages/Likes/index.css
@@ -1,12 +1,17 @@
 .main-container {
-    height:100%;
-    width:100%;
+    height:80vh;
+    width:80%;
+    background-color: rgb(219, 219, 219);
+    overflow: scroll;
+    border-radius: 10px;
+    box-shadow: 5px rgb(92, 92, 92);
 }
 .header-container{
     width:100%;
     display:flex;
     justify-content: space-evenly;
     border-bottom: 1px solid gray;
+    align-items: baseline;
 }
 .menu-container {
     display: flex;
