--- a/client/src/pages/Home/index.css
+++ b/client/src/pages/Home/index.css
@@ -4,4 +4,4 @@
     background-color: rgb(219, 219, 219);
     overflow: scroll;
     border-radius: 10px;
-    box-shadow: 5px rgb(92, 92, 92);}
+    box-shadow: 3px 5px 5px rgb(92, 92, 92);}
